[package]
name = "cc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
miller_rabin = "1.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
alphabet = "0.2.2"
p256 = "0.13.2"
num-traits = "0.2.19"
sha2 = "0.10.8"
